--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto redes sociais</title>
 </head>
 <body>
-    <h1>Ae carai</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes sociais">
+
+        </section>
+    </main>
 </body>
 </html>
