--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">
+                Seu navegador não é compatível com isso.
+            </iframe>
 
         </section>
-        <section id="redes sociais">
+        <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-linkedin.jpg" alt=""></a>
 
         </section>
     </main>
