--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-linkedin.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logo-linkedin.jpg" alt="linkedin"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram2.jpg" alt="instagram"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
 
         </section>
     </main>
